hq api 数据库、redis 配置

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST= 114.67.97.70
+DB_HOST= 129.211.114.135
 DB_PORT=3306
 DB_DATABASE=huanqiu
 DB_USERNAME=huanqiu
-DB_PASSWORD=huanqiu
+DB_PASSWORD=lcf2954626
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
@@ -19,7 +19,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST= 114.67.97.60
+REDIS_HOST= 129.211.114.135
 REDIS_PASSWORD=lcf2954626
 REDIS_PORT=6379
 
